<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Godok Sarang</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="wStatus">WEARABLE STATUS:</string>
    <string name="uActivity">USER ACTIVITY:</string>
    <string name="pData">PEDOMETER DATA:</string>
    <string name="check">CHECK USER INFO</string>
    <string name="uLocation">USER LOCATION:</string>
    <string name="info">Content Retrieved Here</string>
    <string name="ConnectionAcceptedMsg">Service Connection from GDSR has been accepted.</string>
    <string name="ConnectionEstablishedMsg">Service Connection with GDSR has been established.</string>
    <string name="ConnectionTerminateddMsg">Service Connection with GDSR has been terminated.</string>
    <string name="ConnectionAlreadyExist">Service Connection has already been existed!!!</string>
    <string name="ConnectionAlreadyDisconnected">Service Connection has already been disconnected!!!</string>
    <string name="Stop">Stop alert</string>
    <string name="SOS">S O S</string>

</resources>
